# qgc-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
builtin/gadgets/adder-10q/1.0.0/: gadget.json
builtin/gadgets/adder-4q/1.0.0/: gadget.json
builtin/gadgets/bell-pair/1.0.0/: gadget.json  main.qasm
builtin/gadgets/crot-decomposed/1.0.0/: gadget.json  main.qasm
builtin/gadgets/ghz-state/1.0.0/: gadget.json  main.qasm
builtin/gadgets/qft-18q/1.0.0/: gadget.json
builtin/gadgets/qft-4q/1.0.0/: gadget.json  main.qasm
builtin/gadgets/qpe-iterative/1.0.0/: gadget.json  main.qasm
qgc_server/: __init__.py  config.py  main.py  mcp_server.py
qgc_server/models/: __init__.py  schemas.py
qgc_server/routes/: __init__.py  changes.py  compile.py  gadgets.py  ingest.py  resolve.py
qgc_server/services/: compiler.py  database.py  metrics.py  registry.py
tests/: conftest.py  test_changes.py  test_compile.py  test_gadgets.py  test_resolve.py
