[project]
name = "qgc-server"
version = "0.0.1"
description = "Server architecture for qgc"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
authors = []
keywords = ["quantum", "circuit", "gadget", "registry", "qgc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "mcp[cli]>=1.2.0",
    "mineru[all]>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
qgc-server = "qgc_server.main:run"
qgc-mcp = "qgc_server.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qgc_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
